# team-quiz

./: .coverage  .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .runner_system_id  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  agent.py  app.py  app_qna.py  base.py  cliff.toml  config.py  document_parser.py  en.yml  flask_app.py  gemini.py  hi.yml  i18n.py  i18n_utils.py  kn.yml  local.py  main.py  my-runner-config.toml  ollama.py  ollama_provider.py  pyproject.toml  quiz_generator.py  rag_workflow.py  requirements.txt  (+5 more)
.github/: LOCAL_HOOKS.md
.github/workflows/: ci.yml
.specify/: constitution.md
.specify/templates/: feature_spec.md  feature_template.md
ai-quiz-generator/: .env  .env.example  AGENTS.md  README.md  app.py  requirements.txt
ai-quiz-generator/templates/: index.html
specs/: local_qna_spec.md  quiz_generator_spec.md  sample_feature_spec.md  template.md
tests/: test_app.py  test_coverage_boost.py  test_quiz_generator.py
