[project]
name = "team-quiz"
version = "0.1.0"
description = "Team Quiz Application"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "streamlit>=1.30.0",
    "pypdf>=3.0.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-i18n>=0.3.9",
    "cryptography>=42.0.0",
    "ollama>=0.2.0",
    "streamlit-option-menu>=0.3.6",
    "python-docx>=1.1.0",
    "pytesseract>=0.3.10",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.2"
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "vulture",
    "bandit[toml]",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "git-cliff",
    "pip-audit",
    "semgrep"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PL", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=. --cov-report=term-missing"
testpaths = [
    "tests",
]