[project]
name = "team-quiz"
version = "0.1.0"
description = "A Streamlit app to generate quizzes from documents."
requires-python = ">=3.10"
dependencies = [
    "Flask",
    "google-adk",
    "streamlit",
    "pypdf",
    "PyYAML",
    "google-generativeai",
    "ollama",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
full = [
    "python-docx",
    "python-pptx",
    "openpyxl",
    "pytesseract",
    "Pillow",
]
qna = [
    "pymupdf4llm",
    "sentence-transformers",
    "faiss-cpu",
    "llama-cpp-python",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
