[project]
name = "team-quiz"
version = "0.1.0"
description = "A Streamlit app to generate quizzes from documents."
requires-python = ">=3.10"
dependencies = [
    "Flask",
    "google-adk",
    "streamlit",
    "pypdf",
    "PyYAML",
    "google-generativeai",
    "ollama",
    "python-i18n",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pip-audit",
    "semgrep",
]
full = [
    "python-docx",
    "python-pptx",
    "openpyxl",
    "pytesseract",
    "Pillow",
]
qna = [
    "pymupdf4llm",
    "sentence-transformers",
    "faiss-cpu",
    "llama-cpp-python",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true
exclude = [
    '^venv/',
    '^\.venv/',
]

[tool.coverage.run]
omit = [
    "app.py",
    "main.py",
    "app_qna.py",
    "agent.py",
    "flask_app.py",
    "rag_workflow.py",
    "tests/*",
]
